lista de tarefas

--- a/index.html
+++ b/index.html
@@ -13,11 +13,10 @@
         <header>Lista de Tafefas</header>
         <div class="inputField">
           <input type="text" placeholder="Digite aqui sua tarefa">  
-          <button><i class="fas fa-plus"></i></button>
+          <button>Adicionar</button>
         </div>
         <ul class="todoList">
           <!--Os dados vem do armazenamento local-->
-          
         </ul>
   
         <div class="footer">
