Lista de tarefas

--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Desafio To-do list</title>
   <link rel="stylesheet" href="style.css">
+  <script src="https://kit.fontawesome.com/a076d05399.js"></script>
+  
  </head>
 <body>
     <div class="wrapper">
@@ -15,8 +17,7 @@
           <button>Adicionar</button>
         </div>
         <ul class="todoList">
-          
-          
+          <li><span> <i class="fas fa-trash-alt"></i></span></li>
           <!--Os dados vem do armazenamento local-->
         </ul>
   
